#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
# NOTE: Parts of this file (Makefile.am) are automatically transcluded verbatim
# into Makefile.in. Though the build system (GNU Autotools) automatically adds
# its own license boilerplate to the generated Makefile.in, that boilerplate
# does not apply to the transcluded portions of Makefile.am which are licensed
# to you by the ASF under the Apache License, Version 2.0, as described above.
#

AUTOMAKE_OPTIONS = foreign 
ACLOCAL_AMFLAGS = -I m4

noinst_LTLIBRARIES = libguac_common.la
SUBDIRS = . tests

noinst_HEADERS =            \
    common/io.h             \
    common/blank_cursor.h   \
    common/clipboard.h      \
    common/cursor.h         \
    common/defaults.h       \
    common/display.h        \
    common/dot_cursor.h     \
    common/ibar_cursor.h    \
    common/iconv.h          \
    common/json.h           \
    common/list.h           \
    common/pointer_cursor.h \
    common/recording.h      \
    common/rect.h           \
    common/string.h         \
    common/surface.h

libguac_common_la_SOURCES = \
    io.c                    \
    blank_cursor.c          \
    clipboard.c             \
    cursor.c                \
    display.c               \
    dot_cursor.c            \
    ibar_cursor.c           \
    iconv.c                 \
    json.c                  \
    list.c                  \
    pointer_cursor.c        \
    recording.c             \
    rect.c                  \
    string.c                \
    surface.c

libguac_common_la_CFLAGS =  \
    -Werror -Wall -pedantic \
    @LIBGUAC_INCLUDE@

libguac_common_la_LIBADD = \
    @LIBGUAC_LTLIB@

